<resources>
    <string name="app_name">ShortwayClient</string>

    <string name="login_key">user_login</string>>
    <string name="password_key">user_password</string>>
    <string name="user_id_key">user_id</string>>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Ввійти</string>
    <string name="action_registration">Реєстрація</string>
    <string name="error_invalid_email">Email невірний</string>
    <string name="error_incorrect_password">Некоректний пароль</string>
    <string name="error_field_required">Це поле обовязкове</string>
    <string name="server_connection_error">Помилка доступу до сервера</string>

    <string name="find_trip_button_text">Знайти поїздку</string>>
    <string name="suggest_trip_button_text">Запропонувати поїздку</string>
    <string name="invalid_data_for_searching_trips">Введено невірні дані</string>

    <string name="from_field_find_trip_hint">Звідки</string>
    <string name="to_field_find_trip_hint">Куди</string>
    <string name="date_field_find_trip_hint">Дата</string>
    <string name="time_field_find_trip_hint">Час</string>
    <string name="max_wait_time_field_find_trip_hint">Макс. час очікування (хвилини)</string>
    <string name="price_field_find_trip_hint">Ціна</string>
    <string name="pcount_field_find_trip_hint">Максимальна к-сть пасажирів</string>
    <string name="find_trip_for_parameters_button_text">Знайти поїздку</string>
    <string name="suggest_trip_for_parameters_button_text">Запропонувати поїздку</string>
    <string name="add_transitional_points_button_text">Додати проміжні точки</string>

    <string name="accept_trip_button_text">Підтвердити поїздку</string>

    <string name="accept_trip_success">Поїздку підтверджено</string>
    <string name="accept_trip_fail">Поїздку не підтверджено</string>

    <string name="add_trip_success">Поїздку додано</string>
    <string name="add_trip_fail">Поїздку не додано</string>

    <string name="gender">Стать</string>
    <string name="name">Імя</string>
    <string name="surname">Прізвище</string>
    <string name="year_of_birth">Рік народження</string>
    <string name="login">Логін</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>
    <string name="password">Пароль(не менше 8 символів)</string>
    <string name="accept_registration_button_text">Зареєструватися</string>

    <string-array name="genders">
        <item>Чоловіча</item>
        <item>Жіноча</item>
    </string-array>

    <string name="user_registrated_info">Користувача зареєстровано</string>
    <string name="user_changed_info">Інформацію про користувача змінено</string>

    <string name="myself_user_profile">Про себе:</string>

    <string name="edit_info_text">Змінити інформацію</string>

    <string name="choose_photo">Вибрати фото</string>
    <string name="myself_edit_text">Про себе</string>
    <string name="save_changes">Зберегти зміни</string>

    <string name="edit_fail">Не вдалось редагувати інформацію про користувача</string>
    <string name="registration_fail">Не вдалось зареєструвати про користувача</string>
</resources>
