<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.taras.shortway.client.FindTripActivity">

    <EditText
        android:id="@+id/from_field_find_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/from_field_find_trip_hint"/>

    <EditText
        android:id="@+id/to_field_find_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to_field_find_trip_hint"/>

    <EditText
        android:id="@+id/date_field_find_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:editable="false"
        android:hint="@string/date_field_find_trip_hint"/>

    <EditText
        android:id="@+id/time_field_find_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_field_find_trip_hint"/>

    <Button
        android:id="@+id/find_trip_for_parameters_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:text="@string/find_trip_for_parameters_button_text"
        android:textColor="@color/white"/>
</LinearLayout>
