<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_suggest_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.taras.shortway.client.SuggestTripActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/from_field_suggest_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from_field_find_trip_hint"/>

            <LinearLayout
                android:id="@+id/transitional_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <EditText
                android:id="@+id/to_field_suggest_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to_field_find_trip_hint"/>

            <EditText
                android:id="@+id/date_field_suggest_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:hint="@string/date_field_find_trip_hint"/>

            <EditText
                android:id="@+id/time_field_suggest_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_field_find_trip_hint"/>

            <EditText
                android:id="@+id/price_field_suggest_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_field_find_trip_hint"
                android:inputType="number"/>

            <EditText
                android:id="@+id/pcount_field_suggest_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pcount_field_find_trip_hint"
                android:inputType="number"/>

            <Button
                android:id="@+id/add_transitional_points_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle"
                android:text="@string/add_transitional_points_button_text"
                android:textColor="@color/white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <Button
                android:id="@+id/suggest_trip_for_parameters_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle"
                android:text="@string/suggest_trip_for_parameters_button_text"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
